--- a/catalog.html
+++ b/catalog.html
@@ -4,41 +4,43 @@
 <head>
     <meta charset="utf-8">
     <title>Gllacy catalog</title>
-    <link rel="stylesheet" src="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header class="main-header">
-        <div class="logo">
-            <img src="img/menu-logo.png" width="154" height="64" alt="logo">
-        </div>
-        <nav class="main-navigation">
-            <ul>
-                <li>
-                    <a class="active" href="#">Каталог</a>
-                </li>
-                <li>
-                    <a href="#">Доставка и оплата</a>
-                </li>
-                <li>
-                    <a href="#">О компании</a>
-                </li>
-            </ul>
-        </nav>
-        <div class="user-block">
-            <div class="user-block-search">
-                <a class="btn-search" href="#">Поиск</a>
+        <div class="container clearfix">
+            <div class="logo">
+                <img src="img/menu-logo.png" width="154" height="64" alt="logo">
             </div>
-            <div class="user-block-login">
-                <a class="btn-login" href="#">Вход</a>
-            </div>
-            <div class="user-block-cart">
-                <a class="btn-cart" href="#">Пусто</a>
+            <nav class="main-navigation">
+                <ul>
+                    <li>
+                        <a class="active" href="#">Каталог</a>
+                    </li>
+                    <li>
+                        <a href="#">Доставка и оплата</a>
+                    </li>
+                    <li>
+                        <a href="#">О компании</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="user-block">
+                <div class="user-block-search">
+                    <a class="btn-search" href="#">Поиск</a>
+                </div>
+                <div class="user-block-login">
+                    <a class="btn-login" href="#">Вход</a>
+                </div>
+                <div class="user-block-cart">
+                    <a class="btn-cart" href="#">Пусто</a>
+                </div>
             </div>
         </div>
     </header>
     <main class="container">
-        <div class="work-info">
+        <div class="clearfix">
             <ol class="breadcrumb">
                 <li>
                     <a href="#">Главная</a>
@@ -50,59 +52,66 @@
                     Сливочное
                 </li>
             </ol>
-            <div>с 10 до 20, ежедневно</div>
-            <div>8 812 450-25-25</div>
+            <div class="work-info">
+                <div>с 10 до 20, ежедневно</div>
+                <div>8 812 450-25-25</div>
+            </div>
         </div>
         <h1>Сливочное мороженое</h1>
         <form class="filter-form" action="#" name="filterForm" method="get">
-            <fieldset class="filter-group-sort">
-                <legend>Сортировка</legend>
-                <select name="sort">
-                    <option value="popularity" selected>по популярности</option>
-                    <option value="cheapfirst">сначала недорогие</option>
-                    <option value="expensivefirst">сначала дорогие</option>
-                    <option value="fatness">по жирности</option>
-                </select>
-            </fieldset>
-            <fieldset class="filter-group-range">
-                <legend>Цена: 100 руб. — 500 руб.</legend>
-                <div class="filter-group-range-content">
-                    <div class="price-controls">
-                        <input type="text" name="minPrice" value="100" hidden>
-                        <input type="text" name="maxPrice" value="500" hidden>
-                    </div>
-                    <div class="range-controls">
-                        <div class="range-controls-scale">
-                            <div class="range-controls-filled-range"></div>
+            <div class="clearfix">
+                <fieldset class="filter-group-sort">
+                    <legend>Сортировка</legend>
+                    <select name="sort">
+                        <option value="popularity" selected>по популярности</option>
+                        <option value="cheapfirst">сначала недорогие</option>
+                        <option value="expensivefirst">сначала дорогие</option>
+                        <option value="fatness">по жирности</option>
+                    </select>
+                </fieldset>
+                <fieldset class="filter-group-range">
+                    <legend>Цена: 100 руб. — 500 руб.</legend>
+                    <div class="filter-group-range-content">
+                        <div class="price-controls">
+                            <input type="text" name="minPrice" value="100" hidden>
+                            <input type="text" name="maxPrice" value="500" hidden>
                         </div>
-                        <div class="range-controls-toggle range-controls-toggle-min"></div>
-                        <div class="range-controls-toggle range-controls-toggle-max"></div>
+                        <div class="range-controls">
+                            <div class="range-controls-scale">
+                                <div class="range-controls-filled-range"></div>
+                            </div>
+                            <div class="range-controls-toggle range-controls-toggle-min"></div>
+                            <div class="range-controls-toggle range-controls-toggle-max"></div>
+                        </div>
                     </div>
-                </div>
-            </fieldset>
-            <fieldset class="filter-group-fatness">
-                <legend>Жирность:</legend>
-                <input type="radio" name="fatness" id="fatness-field-0" value="0"><label for="fatness-field-0">0%</label>
-                <input type="radio" name="fatness" id="fatness-field-10" value="10"><label for="fatness-field-10">до 10%</label>
-                <input type="radio" name="fatness" id="fatness-field-30" value="30"><label for="fatness-field-30">до 30%</label>
-                <input type="radio" name="fatness" id="fatness-field-100" value="100"><label for="fatness-field-100">выше 30%</label>
-            </fieldset>
-            <fieldset class="filter-group-filler">
-                <legend>Наполнители:</legend>
-                <input type="checkbox" name="chocolate" value="chocolate" id="chocolate-field" checked><label for="chocolate-field">Шоколадные</label>
-                <input type="checkbox" name="sugar" value="sugar" id="sugar-field" checked><label for="sugar-field">Сахарные присыпки</label>
-                <input type="checkbox" name="fruit" value="fruit" id="fruit-field"><label for="fruit-field">Фрукты</label>
-                <input type="checkbox" name="syrup" value="syrup" id="syrup-field"><label for="syrup-field">Сиропы</label>
-                <input type="checkbox" name="jam" value="jam" id="jam-field"><label for="jam-field">Джемы</label>
-            </fieldset>
-            <button class="filter-group-btnsubmit" type="submit">Применить</button>
+                </fieldset>
+                <fieldset class="filter-group-fatness">
+                    <legend>Жирность:</legend>
+                    <input type="radio" name="fatness" id="fatness-field-0" value="0"><label for="fatness-field-0">0%</label>
+                    <input type="radio" name="fatness" id="fatness-field-10" value="10"><label for="fatness-field-10">до 10%</label>
+                    <input type="radio" name="fatness" id="fatness-field-30" value="30"><label for="fatness-field-30">до 30%</label>
+                    <input type="radio" name="fatness" id="fatness-field-100" value="100"><label for="fatness-field-100">выше 30%</label>
+                </fieldset>
+            </div>
+            <div class="clearfix">
+                <fieldset class="filter-group-filler">
+                    <legend>Наполнители:</legend>
+                    <input type="checkbox" name="chocolate" value="chocolate" id="chocolate-field" checked><label for="chocolate-field">Шоколадные</label>
+                    <input type="checkbox" name="sugar" value="sugar" id="sugar-field" checked><label for="sugar-field">Сахарные присыпки</label>
+                    <input type="checkbox" name="fruit" value="fruit" id="fruit-field"><label for="fruit-field">Фрукты</label>
+                    <input type="checkbox" name="syrup" value="syrup" id="syrup-field"><label for="syrup-field">Сиропы</label>
+                    <input type="checkbox" name="jam" value="jam" id="jam-field"><label for="jam-field">Джемы</label>
+                </fieldset>
+                <button class="filter-group-btnsubmit" type="submit">Применить</button>
+                <!--<span class="filter-group-btnsubmit">Apply</span>-->
+            </div>
         </form>
-        <section class="catalog-list">
+        <section class="catalog-list clearfix">
             <article class="catalog-hits-item">
                 <img src="img/catalog-item-1.png" width="200" height="200" alt="Сливочное с апельсиновым джемом и цитрусовй стружкой">
                 <span>310 р/кг</span>
                 <div class="hits-item-link-wrapper">
-                    <a href="#">Сливочное с апельсиновым джемом и цитрусовй стружкой</a>
+                    <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                 </div>
             </article>
             <article class="catalog-hits-item">
@@ -137,7 +146,8 @@
                 <img src="img/catalog-item-6.png" width="200" height="200" alt="Сливочно-черничное с цельными ягодами черники">
                 <span>410 р/кг</span>
                 <div class="hits-item-link-wrapper">
-                    <a href="#">Сливочно-черничное с цельными ягодами черники</a>
+                    <!--<a href="#">Сливочно-черничное с цельными ягодами черники</a>-->
+                    <a href="#">Сливочно-черничное</a>
                 </div>
             </article>
             <article class="catalog-hits-item">
@@ -193,7 +203,7 @@
             <a class="pagination-btn-next-active" href="#">&gt;</a>
         </nav>
     </main>
-    <footer class="main-footer">
+    <footer class="main-footer container clearfix">
         <section class="main-footer-social">
             <a class="social-btn social-btn-twitter" href="#">
                 <img src="img/twitter-icon.png" width="33" height="32" alt="twitter">    
