--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>Gllacy catalog</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&amp;subset=latin,cyrillic">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
